# vellum

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  flake.nix  roadmap.md
assets/: default_config.toml  default_theme.typ
scripts/: release.nu
src/: app.rs  config.rs  editor_backend.rs  external_editor.rs  file_watcher.rs  git.rs  helix_editor.rs  main.rs  mixed_editor.rs  search.rs  segment.rs  style.rs  typst_compiler.rs  vault.rs
src/editor/: highlight.rs  mixed.rs  mod.rs  preamble.rs  render_cache.rs  segment.rs  typst_engine.rs
src/ui/: backlinks_panel.rs  editor_view.rs  mod.rs  preview_pane.rs  rename_dialog.rs  topbar.rs  vault_explorer.rs
