[package]
name = "vellum"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui = "0.34"
egui_ltreeview = "0.7"
walkdir = "2"
notify = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
regex = "1"
dirs = "5"
typst = "0.14"
typst-render = "0.14"
typst-assets = { version = "0.14", features = ["fonts"] }
comemo = "0.4"
fontdb = "0.16"
log = "0.4"
env_logger = "0.11"
